--- a/siwedeeapp/templates/login.html
+++ b/siwedeeapp/templates/login.html
@@ -6,7 +6,7 @@
 
 	<title>SIWEDEE</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
 
 </head>
 <body>
@@ -26,7 +26,7 @@
 		<input type="submit" value="Sign in" />
 	</form>
 
-	<script src="/jquery-3.1.0.js" ></script>
-	<script src="/js/bootstrap.min.js" ></script>
+	<script src="jquery-3.1.0.js" ></script>
+	<script src="js/bootstrap.min.js" ></script>
 </body>
 </html>
