--- a/siwedeeapp/templates/login.html
+++ b/siwedeeapp/templates/login.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>SIWEDEE</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="/css/bootstrap.min.css" />
 
 </head>
 <body>
@@ -25,7 +25,7 @@
 		<input type="submit" value="Sign in" />
 	</form>
 
-	<script src="jquery-3.1.0.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script src="/jquery-3.1.0.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
