--- a/siwedeeapp/templates/login.html
+++ b/siwedeeapp/templates/login.html
@@ -5,18 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>SIWEDEE</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../templates/css/bootstrap.css" />
+	<link rel="stylesheet" href="../templates/css/bootstrap.min.css" />
 
 </head>
 <body>
 	<header>
 		<h4>Sistema Web de documentación de Estancias y Estadias</h4>
 	</header>
-
-	{% if form.errors %}
-	    <p style="color: red" > Errors !!  </p>
-	
-	{% endif %}
 
 	<form id="login" method="post" action=""> {% csrf_token %}
 		<table>
@@ -25,7 +21,7 @@
 		<input type="submit" value="Sign in" />
 	</form>
 
-	<script src="/jquery-3.1.0.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
+	<script src="../templates/jquery-3.1.0.js"></script>
+	<script src="../templates/js/bootstrap.min.js"></script>
 </body>
 </html>
