--- a/siwedeeapp/templates/login.html
+++ b/siwedeeapp/templates/login.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>SIWEDEE</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../templates/css/bootstrap.css" />
-	<link rel="stylesheet" href="../templates/css/bootstrap.min.css" />
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
 </head>
 <body>
@@ -21,7 +25,6 @@
 		<input type="submit" value="Sign in" />
 	</form>
 
-	<script src="../templates/jquery-3.1.0.js"></script>
-	<script src="../templates/js/bootstrap.min.js"></script>
+	
 </body>
 </html>
